[package]
name = "thread_local_allocator"
version = "0.1.0-alpha.3"
edition = "2024"
license = "MIT"
description = "Zero-sized allocator by thread local"
readme = "README.md"
repository = "https://github.com/NewYearPrism/RustThreadLocalAllocator.git"

[dependencies]
allocator-api2 = "0.2"
bumpalo = { version = "3.19.0", optional = true }

[features]
generic = []
bumpalo = ["dep:bumpalo", "bumpalo/allocator-api2"]
